--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
         <title>NYS FD Drill Teams</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>       
-        <link href="./static/site.css" rel="stylesheet" >
+        <link href="/static/site.css" rel="stylesheet" >
     </head>
     <body>
         <div id="root"></div>
 
         <!-- The bundle-name should be same as you defined in webpack config file -->
-        <script src="../dist/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
