adding google analytics tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
         <link href="/static/site.css" rel="stylesheet" >
     </head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5Y5XVWGWH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B5GJRY14EQ"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-W5Y5XVWGWH');
+    gtag('config', 'G-B5GJRY14EQ');
     </script>
     <body>
         <div id="root"></div>
