changing logic for nassau points and allowing video accounts to add tournament videos

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
+    gtag('set', 'linker', {'domains': ['www.nysfddrillteams.com', 'nysfddrillteams.com', 
+        'nydrillteams.com', 'www.nydrillteams.com', 'nysdrillteams.com', 'www.nysdrillteams.com', 'www.nysfddt.com', 'nysfddt.com']});
     gtag('config', 'G-B5GJRY14EQ');
     </script>
     <body>
