--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>NYS FD Drill Teams</title>
         <link rel="icon" href="/static/img/tab-logo3.jpg">
-        <meta name="description" content="Information about New York State Volunteer Fire Department Drill Team Racing.  Includes schedules and past results. Also known as FD Racing and NYS Drill teams">
+        <meta name="description" content="Schedule and results for NYS FD Drill Team Racing.">
+        <meta property="og:title" content="NYS FD Drill Team Racing" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://nysfddrillteams.com" />
+        <meta property="og:image" content="/static/img/logo_onetone.png" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <link href="/static/site.css" rel="stylesheet" >
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed">
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-B5GJRY14EQ"></script>
