--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://nysfddrillteams.com" />
         <meta property="og:image" content="https://nysfddrillteams.com/static/img/preview-image.png" />
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:image:alt" content="NYS FD Drill Teams Banner">
+        <meta name="twitter:title" content="NYS FD Drill Teams">
+        <meta name="twitter:description" content="Schedule and results for NYS FD Drill Team Racing.">
+        <meta name="twitter:image" content="https://nysfddrillteams.com/static/img/preview-image.png">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <link href="/static/site.css" rel="stylesheet" >
